k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
